# ESMA-Templates-Python

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
docs/: parity-protocol.md  r_repo_findings.md
scripts/: run_parity_check.py
src/esma_milan/: __init__.py  cli.py  config.py  nd.py  runner.py
src/esma_milan/api/: __init__.py  jobs.py  schemas.py  server.py
src/esma_milan/io_layer/: __init__.py  clean_names.py  date_parsing.py  read_csv.py  read_taxonomy.py  sanitize_utf8.py  write_workbook.py
src/esma_milan/parity/: __init__.py  diff.py
src/esma_milan/pipeline/: __init__.py  classification.py  enriched.py  exec_summary.py  filters.py  flatten.py  graph.py  identifiers.py  mapping_tables.py  milan_map.py  stage1.py  validate.py  valuation.py
tests/fixtures/: README.md
tests/fixtures/real_anonymised/: collaterals.csv  expected_r_output.xlsx  loans.csv  taxonomy.xlsx
tests/fixtures/synthetic/: collaterals.csv  expected_r_output.xlsx  loans.csv
tests/integration/: test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage6_5_writer.py  test_stage7.py  test_stage8_5_mapping_tables.py
tests/parity/: conftest.py  test_parity_real.py  test_parity_synthetic.py
tests/unit/: test_classification.py  test_clean_names.py  test_date_parsing.py  test_diff.py  test_enriched.py  test_exec_summary_compose.py  test_exec_summary_helpers.py  test_filters.py  test_flatten.py  test_graph.py  test_identifiers.py  test_mapping_tables.py  test_milan_canonical_cols.py  test_milan_compose.py  test_milan_dates.py  test_milan_helpers.py  test_milan_infer.py  test_milan_ranking.py  test_nd.py  test_read_csv.py  test_read_taxonomy.py  test_sanitize_utf8.py  test_valuation.py  test_write_workbook.py
