[project]
name = "esma-milan"
version = "0.1.0"
description = "ESMA -> MILAN pipeline (Python). Bit-for-bit parity with the R reference at r_reference/."
requires-python = "==3.12.*"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ESMA-Templates-Python contributors" }]
dependencies = [
  "polars>=1.10,<2.0",
  "openpyxl>=3.1,<4.0",
  "networkx>=3.3,<4.0",
  "structlog>=24.4,<26.0",
  "click>=8.1,<9.0",
  "pydantic>=2.9,<3.0",
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32,<1.0",
  "python-multipart>=0.0.12,<1.0",
  "slowapi>=0.1.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
  "hypothesis>=6.115,<7.0",
  "mypy>=1.13,<2.0",
  "ruff>=0.7,<1.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
esma-milan = "esma_milan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esma_milan"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/esma_milan", "tests", "scripts"]
plugins = []

[[tool.mypy.overrides]]
module = ["networkx.*", "openpyxl.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "parity: end-to-end parity tests against r_reference fixture outputs",
  "live_r: requires a live R installation (CI nightly only)",
  "fuzz: hypothesis-based differential fuzzing (CI nightly only)",
]
